flask-crypto-app/Openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: flask-crypto-route
spec:
  to:
    kind: Service
    name: flask-crypto-service
  port:
    targetPort: 80
